ajuste de autenticação; criação de tabela de endereço; criação de campo de cpf, ajuste de swagger
